What's New for FreeImage

* : fixed
- : removed
! : changed
+ : added

Month day, 2010 - 3.14.0
! FreeImage now uses libPNG 1.4.0
! FreeImage now uses LibJPEG 8

December 22, 2009 - 3.13.1
! FreeImage now uses libTIFF 3.9.2
! FreeImage now uses OpenJPEG 1.3.0 (SVN patch 2009-11-05)
! FreeImage now uses libPNG 1.2.41
+ [Berend Engelbrecht] added loading of Exif orientation tag in TIFF plugin
+ [Herve Drolon] added decoding support for the old and outdated JPEG-in-TIFF 6.0 format in TIFF plugin
+ [Herve Drolon] added new 'non standard' Exif tags
+ [Herve Drolon] added new Exif makernote tags
* [Herve Drolon] fixed TIF plugin crashing on a malformed TIFF-JPEG compressed image
* [Herve Drolon] fixed MNG plugin crashing on some old mng images
* [Herve Drolon] fixed handling of 2-bit grayscale transparent PNG
* [Herve Drolon] fixed a bug with the compression rate of JP2 and J2K encoders
* [zestony] fixed TIF plugin with the '65535 bytes' pitch size limitation on saving
* [Herve Drolon] fixed handling of PSD files with a non zero file header reserved member
* [Lucian Sabo] PNG plugin now keep transparency when saving 1- or 4-bit transparent images

September 28th, 2009 - 3.13.0
! FreeImage now uses LibJPEG 7
! FreeImage now uses LibRaw-Lite 0.7.2
! FreeImage now uses libPNG 1.2.40
! FreeImage now uses libTIFF 3.9.1
! FreeImage_RotateClassic is deprecated (use FreeImage_Rotate instead)
+ [Herve Drolon] added support for all Photoshop supported color modes to PSD plugin
+ [Herve Drolon] added support for 32-bit to JNG/MNG plugin
+ [Amir Ebrahimi] added loading support for the PICT format
+ [Herve Drolon] added loading support for camera RAW formats (using LibRawLite wrapper for dcraw)
+ [Mihail Naydenov] added UNICODE functions FreeImage_JPEGTransformU and FreeImage_JPEGCropU
+ [Carsten Klein] added FreeImage_OpenMultiBitmapFromHandle
+ [Carsten Klein] added FreeImage_FillBackground
+ [Carsten Klein] added FreeImage_EnlargeCanvas